<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">Popular Movies</string>
    <string name="super_duo1">Stock Hawk</string>
    <string name="super_duo2">Build it Bigger</string>
    <string name="ant_terminator">Make Your App Material</string>
    <string name="materialize">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
